--- a/app/src/main/res/layout/fragment_task.xml
+++ b/app/src/main/res/layout/fragment_task.xml
@@ -8,13 +8,26 @@
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/container_items"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <ListView
-            android:id="@+id/lv_task"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="50dp">
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <ListView
+                android:id="@+id/lv_task"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+            </ListView>
+            <ImageView
+                android:id="@+id/empty_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/back"
+                android:scaleType="fitXY"
+                />
+        </LinearLayout>
 
-        </ListView>
     </android.support.v4.widget.SwipeRefreshLayout>
     <LinearLayout
         android:layout_width="wrap_content"
@@ -32,7 +45,7 @@
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_gravity="bottom"
         android:orientation="horizontal"
         android:background="@color/colorGrey">
@@ -42,7 +55,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@null"
-            android:text="部门分类选择"
+            android:text="工作分类"
             />
         <View
             android:layout_width="1dp"
@@ -54,7 +67,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@null"
-            android:text="部门选择"
+            android:text="责任单位"
             />
     </LinearLayout>
 </FrameLayout>
