--- a/app/src/main/res/layout/activity_task_details.xml
+++ b/app/src/main/res/layout/activity_task_details.xml
@@ -125,7 +125,7 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
                     <TextView
-                        android:text="任务预算："
+                        android:text="上报频率："
                         android:layout_gravity="left"
                         android:gravity="left"
                         android:layout_width="wrap_content"
